--- a/Animation-with-JavaScriptand-jQuery/challenges/01_ch.html
+++ b/Animation-with-JavaScriptand-jQuery/challenges/01_ch.html
@@ -1,10 +1,13 @@
 <body>
     <p id="paragraph">Here is a paragraph</p>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
     <script>
+        /* jquery solution 
         $("#paragraph").css("font-size", "24px");
-
+        */
+        // plain js solution
+        var pgh = document.querySelector("#paragraph");
+        pgh.style.fontSize = "24px";
     </script>
 </body>
