--- a/Animation-with-JavaScriptand-jQuery/challenges/04_ch.html
+++ b/Animation-with-JavaScriptand-jQuery/challenges/04_ch.html
@@ -10,6 +10,6 @@
 
     <script>
         $("#main p").css("font-size", "24px");
-        $("#main p").css("color", "red")
+        $("#main p").css("color", "red");
     </script>
 </body>
