--- a/Animation-with-JavaScriptand-jQuery/challenges/12_ch.html
+++ b/Animation-with-JavaScriptand-jQuery/challenges/12_ch.html
@@ -11,11 +11,11 @@
        <p>Here is a paragraph with a <a 
        href="http://google.com">link to google</a> in 
        it</p>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script>
-        const navLinks = document.querySelectorAll("nav ul li a");
-        for (let i = 0; i < navLinks.length; i++) {
-        //navLinks[i].onclick = function () { alert("clicked!") };
-        navLinks[i].addEventListener("click", function () { alert("clicked") });
-        } 
+        $("nav ul li a").click(function(){
+            alert("clicked")
+        });
     </script>
 </body>
