--- a/Animation-with-JavaScriptand-jQuery/challenges/17_ch.html
+++ b/Animation-with-JavaScriptand-jQuery/challenges/17_ch.html
@@ -1,22 +1,25 @@
-<nav>
-    <ul>
-        <li><a href="#">link one</a></li>
-        <li><a href="#">link two</a></li>
-        <li><a href="#">link three</a></li>
-        <li><a href="#">link four</a></li>
-        <li><a href="#">link five</a></li>
-    </ul>
-   </nav>
-   <p>Here is a paragraph with a <a href="http://google.com">link to google</a> in it</p>
+<body>
+    <nav>
+        <ul>
+            <li><a href="#">link one</a></li>
+            <li><a href="#">link two</a></li>
+            <li><a href="#">link three</a></li>
+            <li><a href="#">link four</a></li>
+            <li><a href="#">link five</a></li>
+        </ul>
+    </nav>
+    <p>Here is a paragraph with a <a href="http://google.com">link to google</a> in it</p>
+    
+    
+    <script>
+            const navLinks = document.querySelectorAll("nav ul li a");
+            for (let i = 0; i < navLinks.length; i++) {
+            navLinks[i].addEventListener("click", function () {
+            const thisLink = this.innerHTML;
+            document.getElementById("paragraph").innerHTML = `You clicked ${thisLink}`;
+            });
+            }
+    </script>
+</body>
 
-
-   <script>
-        const navLinks = document.querySelectorAll("nav ul li a");
-        for (let i = 0; i < navLinks.length; i++) {
-        navLinks[i].addEventListener("click", function () {
-        const thisLink = this.innerHTML;
-        document.getElementById("paragraph").innerHTML = `You clicked ${thisLink}`;
-        });
-        }
-   </script>
    
