--- a/Animation-with-JavaScriptand-jQuery/week2/example2.html
+++ b/Animation-with-JavaScriptand-jQuery/week2/example2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jQuery Animation Example 1</title>
+    <title></title>
     <style>
         body{
             padding: 100px;
@@ -11,55 +11,50 @@
         nav{
             margin-bottom: 50px;
         }
-        nav ul {
-            border-left: 1px solid black;
+        nav ul{
             overflow: hidden;
+            border-left: 1px solid black;
             margin: 0;
             padding: 0;
             list-style-type: none;
         }
         nav ul li{
-            float: left;
+            float: left;            
         }
-        nav ul li a {
+        nav ul li a{
             display: block;
-            width: 149px;
+            text-decoration: none;
             text-align: center;
+            width: 149px;
+            text-transform: uppercase;
+            border-right: 1px solid black;
             background: #BEBCBC;
             color: #333;
-            border-right: 1px solid #777676;
-            height: 50px;
             line-height: 50px;
-            text-decoration: none; 
-            text-transform: uppercase;
+
         }
         nav ul li a:hover{
             background-color: #D5D4D4;
         }
-        #box{
+        #box {
             width: 450px;
             height: 300px;
-            background: #4C90D8;
+            background-color: #4c90d8;
         }
     </style>
-
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#" id="hidebox">hide</a></li>
-            <li><a href="#" id="showbox">show</a></li>
-            <li><a href="#" id="togglebox">toggle</a></li>
+            <li><a href="#" id="slideupbox">hide</a></li>
+            <li><a href="#" id="slidedownbox">show</a></li>
+            <li><a href="#" id="slidetogglebox">toggle</a></li>
         </ul>
 
     </nav>
 
     <div id="box"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script>
-        $("#hidebox").click(function(){$("#box").hide(500);});
-        $("#showbox").click(function(){$("#box").show(1000)});
-        $("#togglebox").click(function(){$("#box").toggle(500, function(){alert("Done")})});
-    </script>
+
 </body>
 </html>
