--- a/Animation-with-JavaScriptand-jQuery/week2/example1.html
+++ b/Animation-with-JavaScriptand-jQuery/week2/example1.html
@@ -56,10 +56,12 @@
 
     <div id="box"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
     <script>
         $("#hidebox").click(function(){$("#box").hide(500);});
         $("#showbox").click(function(){$("#box").show(1000)});
-        $("#togglebox").click(function(){$("#box").toggle(500, function(){alert("Done")})});
+        $("#togglebox").click(function(){$("#box").toggle(2000, "easeOutBounce", function(){alert("Done")})});
     </script>
 </body>
 </html>
