--- a/Animation-with-JavaScriptand-jQuery/week2/index.html
+++ b/Animation-with-JavaScriptand-jQuery/week2/index.html
@@ -6,6 +6,9 @@
     <title>Tab Interface</title>
 </head>
 <link rel="stylesheet" href="css/styles.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+
+<script src="scripttabs.js" defer></script>
 <body>
     <div id="tabs">
         <ul>
@@ -53,5 +56,8 @@
             </p>
         </div>  
     </div>
+
+
+  
 </body>
 </html>
