--- a/Interactivity-with-JavaScript-and-jQuery/week2/index.html
+++ b/Interactivity-with-JavaScript-and-jQuery/week2/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" defer></script>
-    <script src="smoothscroll.js" defer></script>
+    <!--<script src="smoothscroll.js" defer></script>-->
+    <script src="script.js" defer></script>
+
 </head>
 <body>
     <header>
